Add explicit world-bypass playback option